--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
 
         <java.version>1.8</java.version>
+
+        <guava.version>23.0</guava.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
